# kivy

./: README.md  buildozer.spec  isizulu_app_with_admob.py  main-4.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
assets/: izaga_nezisho.json  zulu_dictionary.json
my-app/: pyproject.toml
my-app/src/: main.py
