[project]
name = "IsiZulu AI writer assistant"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Flet developer", email = "kiewmthombeni@gmail.com" }
]
dependencies = [
  "flet==0.27.6",
  "flet-ads==0.1.0",
]

[tool.flet]
org = "com."
product = "MyApp"
company = ""
copyright = "Copyright (C) 2025 by "

[tool.flet.app]
path = "src"

# for Android
[tool.flet.android.meta_data]
"com.google.android.gms.ads.APPLICATION_ID" = "ca-app-pub-3940256099942544~3347511713"

# for iOS
[tool.flet.ios.info]
GADApplicationIdentifier = "ca-app-pub-xxxxxxxxxxxxxxxx~yyyyyyyyyy"
