[project]
name = "IsiZulu AI writer assistant"
version = "0.1.0"
description = ""
requires-python = ">=3.9"
authors = [
    { name = "Flet developer", email = "kiewmthombeni@gmail.com" }
]
dependencies = [
  "flet==0.27.6",
  "flet-ads==0.1.0",
  "asyncio"
  "platform"
  "os"
  "typing"
  "Dict" 
  "Optional"
  "Callable"
  "logging"
]

[tool.flet]
org = "com.kiew"
product = "IsiZulu AI writer assistant"
company = "IsiZulu AI writer assistant"
copyright = "Copyright (C) 2025 by "

[tool.flet.app]
path = ""

# for Android
[tool.flet.android.meta_data]
"com.google.android.gms.ads.APPLICATION_ID" = "ca-app-pub-3940256099942544~3347511713"


